--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="./script/app.js"></script>
 
 </head>
-<body ng-app="ramoshiIT" ng-controller="myCtrl" ng-init="initTmp()">
+<body ng-app="ramoshiIT" ng-controller="myCtrl" ng-init="initDoc()">
 
 <ul>
 	<li ng-repeat="ct in container.docs.categories">
